Keyframed node properties stay linked after shading network duplication #59062

Closed
opened 2018-12-09 10:32:08 +01:00 by Nicolas Prigent · 20 comments

System Information
Operating system: windows 10
Graphics card: gtx 760

Blender Version
Broken: 2.8 beta
Worked: 2.79

Short description of error
Keyframed node properties stay linked after shading network duplication

Exact steps for others to reproduce the error
If I duplicate from the properties panel a shader that as animated nodes, those animated nodes are linked in some way by their keyframes : if I move or delete a keyframe on the base shader, it moves or delete it also on the duplicated shader, althought I can change node properties that are not keyed. You'll find a test file showing the bug, the animation is on the color mix node. Just move or delete a keyframe on the animation.

animated_nodes_bug.blend

**System Information** Operating system: windows 10 Graphics card: gtx 760 **Blender Version** Broken: 2.8 beta Worked: 2.79 **Short description of error** Keyframed node properties stay linked after shading network duplication **Exact steps for others to reproduce the error** If I duplicate from the properties panel a shader that as animated nodes, those animated nodes are linked in some way by their keyframes : if I move or delete a keyframe on the base shader, it moves or delete it also on the duplicated shader, althought I can change node properties that are not keyed. You'll find a test file showing the bug, the animation is on the color mix node. Just move or delete a keyframe on the animation. [animated_nodes_bug.blend](https://archive.blender.org/developer/F5897690/animated_nodes_bug.blend)

Added subscriber: @boustalahit

Added subscriber: @boustalahit

#62393 was marked as duplicate of this issue

#62393 was marked as duplicate of this issue
Member

Added subscribers: @JacquesLucke, @JoshuaLeung, @lichtwerk

Added subscribers: @JacquesLucke, @JoshuaLeung, @lichtwerk
Member

Confirmed.
Seems another issue with data path resolution on nodes [I dont remember the details, but I do recall there were issues relating to this (nodes and drivers e.g.)]

Also note that renaming a node will break the animation actually (was not the case in 2.79)

#59256 is related

@JoshuaLeung: mind sharing your wisdom?
or maybe @JacquesLucke has an idea?

Confirmed. Seems another issue with data path resolution on nodes [I dont remember the details, but I do recall there were issues relating to this (nodes and drivers e.g.)] Also note that renaming a node will break the animation actually (was not the case in 2.79) #59256 is related @JoshuaLeung: mind sharing your wisdom? or maybe @JacquesLucke has an idea?
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

#59390 was also reported (which I think has the same roots)

adding @Sergey here...

#59390 was also reported (which I think has the same roots) adding @Sergey here...
Member

Interstingly, though #59390 is resolved, this is still happening.
So making a single material user from the row.template_ID(ob, "active_material", new="material.new") doesnt seem to do the same thing as Object > Relations > Make Single User > Materials

Interstingly, though #59390 is resolved, this is still happening. So making a single material user from the `row.template_ID(ob, "active_material", new="material.new")` doesnt seem to do the same thing as `Object` > `Relations` > `Make Single User` > `Materials`
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

In #59062#604282, @lichtwerk wrote:
So making a single material user from the row.template_ID(ob, "active_material", new="material.new") doesnt seem to do the same thing as Object > Relations > Make Single User > Materials

@mont29: can you confirm the above? (difference between Object > Relations > Make Single User > Materials and using the template_ID from the Properties Editor [doesnt matter if you make single user or add new from there])

Properties Editor doesnt seem to make animation unique, whereas Object > Relations > Make Single User > Materials seems to do so...
Should this be consistent (just asking...)?

> In #59062#604282, @lichtwerk wrote: > So making a single material user from the `row.template_ID(ob, "active_material", new="material.new")` doesnt seem to do the same thing as `Object` > `Relations` > `Make Single User` > `Materials` @mont29: can you confirm the above? (difference between `Object` > `Relations` > `Make Single User` > `Materials` and using the template_ID from the Properties Editor [doesnt matter if you make single user or add new from there]) Properties Editor doesnt seem to make animation unique, whereas `Object` > `Relations` > `Make Single User` > `Materials` seems to do so... Should this be consistent (just asking...)?
Bastien Montagne self-assigned this 2019-02-13 17:18:56 +01:00

Those are two different operators/operatioons, but do not see why copying material from IDTemplate widget should not also duplicate its actions. Fix incoming.

Those are two different operators/operatioons, but do not see why copying material from IDTemplate widget should not also duplicate its actions. Fix incoming.

This issue was referenced by a75ac18638

This issue was referenced by a75ac18638f41d8b427b7519628602b6be54d995

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

Looks like this popped up again (#62393).
@mont29: I can confirm that making a new material from the template IDTemplate widget duplicates the action, whereas making it a single user still doesnt.

Looks like this popped up again (#62393). @mont29: I can confirm that making **a new** material from the template IDTemplate widget duplicates the action, whereas **making it a single user** still doesnt.
Member

Added subscriber: @VladimirKunyansky

Added subscriber: @VladimirKunyansky
Member

Hm, BKE_animdata_from_id() returns NULL in BKE_animdata_copy_id_action() when doing this?
Gotta go now, but will have another look later...

Hm, `BKE_animdata_from_id()` returns NULL in `BKE_animdata_copy_id_action() `when doing this? Gotta go now, but will have another look later...

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Please do not merge just because issues are similar, those remain two different things.

Please do not merge just because issues are similar, those remain two different things.
Member

So we have id_single_user() vs. single_mat_users()

id_single_user() doesnt traverse down the nodetree and doesnt copy nodetrees action, whereas single_mat_users() does.
Same thing is happening in 2.79

I am not exactly sure if we would always want the behavior of copying actions here, but if in doubt, my vote would go for it, patch incoming...

So we have `id_single_user()` vs. `single_mat_users()` `id_single_user()` doesnt traverse down the nodetree and doesnt copy nodetrees action, whereas `single_mat_users()` does. Same thing is happening in 2.79 I am not exactly sure if we would **always** want the behavior of copying actions here, but if in doubt, my vote would go for it, patch incoming...
Member

@mont29: oki, posted patch for #62393 then...

@mont29: oki, posted patch for #62393 then...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59062
No description provided.